Added sorting by rating
