# storage/api-docs/api-docs.json
@@ -852,6 +852,19 @@
                                 "type": "integer"
                             }
                         }
+                    },
+                    {
+                        "name": "sort",
+                        "in": "query",
+                        "description": "Sort recipes by average rating in ascending or descending order",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "enum": [
+                                "rating_asc",
+                                "rating_desc"
+                            ]
+                        }
                     }
                 ],
                 "responses": {
